--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liquifier",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Liquifier may be used to generate fluid transcription, according to the concepts of Beethovens Wekstatt",
   "main": "index.js",
   "type": "module",
@@ -25,7 +25,8 @@
   "homepage": "https://github.com/BeethovensWerkstatt/liquifier#readme",
   "dependencies": {
     "jsdom": "^25.0.1",
-    "verovio": "file:verovio",
-    "xmldom-qsa": "^1.1.3"
+    "verovio": "^5.2.0",
+    "xmldom-qsa": "^1.1.3",
+    "simple-git": "^3.28.0"
   }
 }
