git file date with execSync

--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   "dependencies": {
     "jsdom": "^25.0.1",
     "verovio": "^5.2.0",
-    "xmldom-qsa": "^1.1.3",
-    "simple-git": "^3.28.0"
+    "xmldom-qsa": "^1.1.3"
   }
 }
