--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/BeethovensWerkstatt/liquifier#readme",
   "dependencies": {
     "jsdom": "^25.0.1",
+    "minimist": "^1.2.8",
     "verovio": "^5.2.0",
     "xmldom-qsa": "^1.1.3"
   }
